add email service
email service not working
solve it later

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Filename=./dados.db"
+  },
+  "EmailConfiguration": {
+    "NomeRemetente": "AspNetCoreWebApp",
+    "EmailRemetente": "misaelpio@gmail.com",
+    "Senha": "Mk64235M",
+    "EnderecoServidorEmail": "smtp.email.com",
+    "PortaServidorEmail": 587,
+    "UsarSsl": true
   }
 }
