--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   "EmailConfiguration": {
     "NomeRemetente": "AspNetCoreWebApp",
     "EmailRemetente": "misaelpio@gmail.com",
-    "Senha": "Mk64235M",
+    "Senha": "Mk&64235M",
     "EnderecoServidorEmail": "smtp.email.com",
     "PortaServidorEmail": 587,
     "UsarSsl": true
